--- a/src/pages/teller/teller.css
+++ b/src/pages/teller/teller.css
@@ -1,22 +1,38 @@
 .page {
-  text-align: center;
-  width: 100vh;
-  height: 100vh;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-.App-header {
-  /* background-color: #282c34; */
-  min-height: 100vh;
   display: flex;
+  width: 100vw;
+  height: 100vh;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: radial-gradient(circle farthest-corner at center center, #C378FC 0%, #231421 100%);
 }
+
+.tree-container {
+  position: absolute;
+  z-index: -1;
+}
+
+.header {
+  display: flex;
+  margin: auto;
+  flex-grow: 2;
+}
+
+.header-text {
+  margin: auto;
+  font-size: 80px;
+  background: linear-gradient(to right, #B612CF 0%, #D22144 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
+.body {
+  display: flex;
+  flex-grow: 3;
+}
+
+.tail {
+  display: flex;
+  flex-grow: 5;
+}
+
 
