--- a/src/pages/teller/teller.css
+++ b/src/pages/teller/teller.css
@@ -1,7 +1,7 @@
 .page {
   display: flex;
   width: 100vw;
-  height: 100vh;
+  /* height: 100vh; */
   flex-direction: column;
   background-color: radial-gradient(circle farthest-corner at center center, #C378FC 0%, #231421 100%);
 }
